@@ -15,17 +15,19 @@
  */
 package org.instancio.generators.collections;
 
-import org.instancio.exception.InstancioException;
 import org.instancio.generators.AbstractRandomGenerator;
 import org.instancio.internal.GeneratedHints;
 import org.instancio.internal.model.ModelContext;
 import org.instancio.settings.Setting;
 import org.instancio.util.Verify;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.Collection;
 
 public class CollectionGenerator<T> extends AbstractRandomGenerator<Collection<T>> implements CollectionGeneratorSpec<T> {
+    private static final Logger LOG = LoggerFactory.getLogger(CollectionGenerator.class);
 
     protected int minSize;
     protected int maxSize;
@@ -77,11 +79,13 @@ public class CollectionGenerator<T> extends AbstractRandomGenerator<Collection<T
     }
 
     @Override
+    @SuppressWarnings({"unchecked", "java:S1168"})
     public Collection<T> generate() {
         try {
-            return random().diceRoll(nullable) ? null : (Collection<T>) type.newInstance();
+            return random().diceRoll(nullable) ? null : (Collection<T>) type.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
-            throw new InstancioException(String.format("Error creating instance of: %s", type), ex);
+            LOG.debug("Error creating instance of: {}", type, ex);
+            return null;
         }
     }
 
